fixed hamburger items so they are z-indexed up but still ugly

--- a/src/component/navigation/_navigation.scss
+++ b/src/component/navigation/_navigation.scss
@@ -10,8 +10,11 @@
 }
 
 .navbar-item {
+  display: block;
+  z-index: 5;
 }
 
 #Options:hover {
   background-color: none;
+  
 }
